--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -216,8 +216,7 @@ let rd_vscrollf = (scrollerHeight, scrollerItemHeight, rd_item, cbScroll) => {
 				rd_for(vm => vm, rd_item)(list1(vm0), list1(vm1), dom, domc);
 			})
 			.build()
-		)
-		.build();
+		);
 };
 
 let rd_vm = rd
@@ -238,6 +237,7 @@ let rd_vm = rd
 				rd.tag('div').attr('style', 'height: ' + scrollerItemHeight + 'px;').child(rd.child(vm => document.createTextNode('scrolling ' + vm))).build(),
 				start => renderAgain(rd_vm, vm => ({ ...vm, vscroll: { start, vms: vm.vscroll.vms, }, })),
 			)
+			.build()
 		),
 	)
 	.build();
